src/objects/Order_Line_Item__c.object
<CustomObject>
    <description>This will contain the details for every order line item</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Quantity__c</fullName>
        <description>This will contain the quantity that is approved for each order item</description>
        <label>Approved Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Remarks__c</fullName>
        <description>This contains the remarks by the approver</description>
        <label>Approver Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <label>Basic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>This contains the capacity details of every product model</description>
        <label>Capacity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Despatched_Quantity__c</fullName>
        <description>This will contain the total despatched quantity for every order item</description>
        <label>Despatched Quantity</label>
        <summarizedField>Order_Despatch__c.Despatch_Quantity__c</summarizedField>
        <summaryForeignKey>Order_Despatch__c.Order_Line_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ERP_Code__c</fullName>
        <label>ERP Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>This contains the product model name</description>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item_Despatch__c</fullName>
        <formula>IF (Despatched_Quantity__c  &gt;=   Order_Quantity__c  , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Line Item Despatch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item_Number__c</fullName>
        <description>This field will always have the value &quot;1&quot; whenever a new line item is added</description>
        <label>Order Line Item Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Line_Price__c</fullName>
        <description>This will contain the total price for every order line item</description>
        <label>Order Line Price</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <description>This contains the quantity that is ordered by the distributor</description>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This contains the rate for each order line Item (model)</description>
        <label>Price Rate</label>
        <referenceTo>Price_Book__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>This will contain the product categories of SuKam PRM project</description>
        <label>Product Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Order Line Item</label>
    <nameField>
        <label>Order Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>